Fix for lightbox container on IE11 max-width

--- a/src/styles/components/lightbox.scss
+++ b/src/styles/components/lightbox.scss
@@ -8,6 +8,7 @@ $lg-path-images: '~lightgallery.js/src/img';
 
 .lightbox {
   display: inline-block;
+  max-width: 100%;
 
   img {
     cursor: pointer;
